Project

General

Profile

Actions

Bug #16465

closed

False keyword warning against Struct#initialize

Bug #16465: False keyword warning against Struct#initialize

Added by mame (Yusuke Endoh) over 6 years ago. Updated over 6 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.7.0p0 (2019-12-25 revision 647ee6f091) [x86_64-linux]
[ruby-core:96563]
Tags:

Description

The following code is warned:

Sample2 = Struct.new(:s1, :s2, :s3) do
    def initialize(a1:, a2:)
        super(a1, a2, a1 + a2)
    end
end
p Sample2.new(a1:1, a2:2)
#=> test.rb:6: warning: Using the last argument as keyword parameters is deprecated; maybe ** should be added to the call
#=> test.rb:2: warning: The called method `initialize' is defined here

I think the code is innocent and the warning is false positive. I'll create a pull request.

Updated by nobu (Nobuyoshi Nakada) over 6 years ago Actions #3 [ruby-core:96566]

Your patch seems eventually same as:

diff --git a/struct.c b/struct.c
index 79131db2bd..07bfe59b97 100644
--- a/struct.c
+++ b/struct.c
@@ -326,9 +326,7 @@ static VALUE
 setup_struct(VALUE nstr, VALUE members, int keyword_init)
 {
     long i, len;
-    VALUE (*new_func)(int, const VALUE *, VALUE) = rb_class_new_instance;
-
-    if (keyword_init) new_func = struct_new_kw;
+    VALUE (*new_func)(int, const VALUE *, VALUE) = struct_new_kw;
 
     members = struct_set_members(nstr, members);
 

Updated by Anonymous over 6 years ago Actions #4

  • Status changed from Open to Closed

Applied in changeset git|adf709a78534c1483ba851ccb0490464ca31503c.


Classes made from Struct should have default new singleton method.

[Bug #16465] [Bug #16801]
[Fix GH-2795] [Fix GH-2944] [Fix GH-3045] [Fix GH-3093]

Note: Backporting shouldn't modify object.h and instead can use
struct_new_kw which is basically a duplicate implementation of
rb_class_new_instance_pass_kw

Co-authored-by: Yusuke Endoh
Co-authored-by: John Hawthorn
Co-authored-by: Adam Hess
Co-authored-by: Jose Cortinas
Co-authored-by: Jean Boussier

Actions

Also available in: PDF Atom