struct.c: use RB_PASS_CALLED_KEYWORDS for initialize

It caused a false positive warning for innocent usage of
Struct#initialize.  [Bug #16465]