internal/object.h
@@ -22,6 +22,7 @@ int rb_bool_expected(VALUE, const char *);
 static inline void RBASIC_CLEAR_CLASS(VALUE obj);
 static inline void RBASIC_SET_CLASS_RAW(VALUE obj, VALUE klass);
 static inline void RBASIC_SET_CLASS(VALUE obj, VALUE klass);
+VALUE rb_class_new_instance_passedkw(int argc, const VALUE *argv, VALUE klass);
 
 RUBY_SYMBOL_EXPORT_BEGIN
 /* object.c (export) */
